@@ -1,4 +1,2 @@
 maintenance:
 - categories not existing anymore (deleted from table categories) should be removed also from alb_cats and img_cats
-- delete rating when image is deleted
-
