@@ -251,12 +251,14 @@ define('_CO_WGGALLERY_EXIF_FILENAME', 'File name');
 define('_CO_WGGALLERY_EXIF_FILEDATETIME', 'File date');
 define('_CO_WGGALLERY_EXIF_FILESIZE', 'File size');
 define('_CO_WGGALLERY_EXIF_MIMETYPE', 'Mimetype');
-define('_CO_WGGALLERY_EXIF_CAMERA', 'Camera Type');
-define('_CO_WGGALLERY_EXIF_MODEL', 'Modell');
+define('_CO_WGGALLERY_EXIF_CAMERA', 'Camera brand');
+define('_CO_WGGALLERY_EXIF_MODEL', 'Model');
 define('_CO_WGGALLERY_EXIF_EXPTIME', 'Exposure time');
 define('_CO_WGGALLERY_EXIF_FOCALLENGTH', 'Focal Length');
 define('_CO_WGGALLERY_EXIF_DATETIMEORIG', 'Date time original');
 define('_CO_WGGALLERY_EXIF_ISO', 'ISO Speed');
+define('_CO_WGGALLERY_EXIF_LENSMAKE', 'Lens brand');
+define('_CO_WGGALLERY_EXIF_LENSMODEL', 'Lens model');
 // ---------------- Misc ----------------
 define('_CO_WGGALLERY_MAINTAINEDBY', 'Maintained By');
 define('_CO_WGGALLERY_MAINTAINEDBY_DESC', 'Allow url of support site or community');
